--- a/local.env
+++ b/local.env
@@ -1,4 +1,6 @@
 FLASK_DEBUG=1
+FLASK_ENV=development
+FLASK_APP=run.py
 POSTGRES_DB=postgres
 POSTGRES_HOST=localhost
 POSTGRES_HOST_AUTH_METHOD=trust
